[project]
name = "clients"
version = "1.5"
description = "High-level HTTP clients for Python."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["requests", "sessions", "responses", "resources", "asyncio"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/coady/clients"
Documentation = "https://coady.github.io/clients"
Changelog = "https://github.com/coady/clients/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/clients/issues"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[[tool.mypy.overrides]]
module = ["httpx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["clients"]
branch = true
