[project]
name = "clients"
version = "1.5.1"
description = "High-level HTTP clients for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["requests", "sessions", "responses", "resources", "asyncio"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/coady/clients"
Documentation = "https://coady.github.io/clients"
Changelog = "https://github.com/coady/clients/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/clients/issues"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.rules]
unused-ignore-comment = "error"
invalid-method-override = "ignore"
unresolved-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["clients"]
branch = true

[dependency-groups]
dev = ["pytest-cov", "pytest-httpbin>=0.10.2", "pytest-asyncio>=0.17"]
docs = ["mkdocstrings[python]", "mkdocs-material"]
