[metadata]
name = clients
version = attr: clients.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = High-level HTTP clients for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/clients
license = Apache Software License
keywords = requests, sessions, responses, resources, asyncio
project_urls =
    Documentation = https://coady.github.io/clients
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = clients
install_requires = httpx>=1
python_requires = >=3.7

[options.package_data]
clients = py.typed

[flake8]
max-line-length = 110
exclude = .venv

[coverage:run]
source = clients
branch = True

[mypy]

[mypy-httpx.*]
ignore_missing_imports = True
